objects/LLC_BI__Deposit__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Number_of_Required_Signers__c</fullName>
        <description>This field indicates the number of redeemers (signers) that are required to withdrawal, either partial or complete, from an account.</description>
        <label>Number of Required Signers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - One signature line</fullName>
                    <default>true</default>
                    <label>1 - One signature line</label>
                </value>
                <value>
                    <fullName>2 - Two signature lines</fullName>
                </value>
                <value>
                    <fullName>3 - Three signature lines</fullName>
                </value>
                <value>
                    <fullName>4 - Four signature lines</fullName>
                </value>
                <value>
                    <fullName>5 - Five signature lines</fullName>
                </value>
                <value>
                    <fullName>6 - Six signature lines</fullName>
                </value>
                <value>
                    <fullName>7 - Seven signature lines</fullName>
                </value>
                <value>
                    <fullName>8 - Eight signature lines</fullName>
                </value>
                <value>
                    <fullName>9 - Nine signature lines</fullName>
                </value>
                <value>
                    <fullName>10 - Ten signature lines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Open_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This date field is used to specify the date the deposit account was opened.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Originating_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field associates a deposit account to the branch which it was originated in. This field is set during the deposit origination workflow.</description>
        <label>Originating Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Distribution_Payment__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It holds a description of the other payment election type.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A description of the other payment election type.</inlineHelpText>
        <label>Other Distribution Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Frequency_of_Distributions__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a description of the other frequency of the periodic distributions.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A description of the other frequency of the periodic distributions.</inlineHelpText>
        <label>Other Frequency of Distributions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Overdraft_Consent_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, consent to pay overdrafts out of the account is given.</description>
        <inlineHelpText>If true consent to pay overdrafts out of the account is being given.</inlineHelpText>
        <label>Overdraft Consent Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Overdraft_Services__c</fullName>
        <description>This optional picklist field is manually populated during deposit origination and indicates if the applicant would like overdraft services.</description>
        <label>Overdraft Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner_Deceased_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the party passed as the Owner of the IRA is deceased. It is typically used in situations where the IRA owner has died but a formal beneficiary IRA has not been created.</description>
        <inlineHelpText>If true the party passed as the Owner of the IRA is deceased. Typically used in connection with situations where the IRA Owner has died but a formal Beneficiary IRA has not been created.</inlineHelpText>
        <label>Owner Deceased Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Structure_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required during the New Deposit Workflow. It is used to indicate the Ownership Structure Type of this deposit.</description>
        <label>Ownership Structure Type</label>
        <referenceTo>LLC_BI__Ownership_Structure_Type__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Account_Number__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the account number to be debited for the rental fee of the safe deposit box.</description>
        <inlineHelpText>The account number to be debited for the rental fee of the safe deposit box.</inlineHelpText>
        <label>Payment Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Periodic_Change_Limit_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, there is a limit to the amount that a variable rate can change over successive specified periods.</description>
        <inlineHelpText>If true there is a limit to the amount that a variable rate can change over successive specified periods.</inlineHelpText>
        <label>Periodic Change Limit Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Periods_Between_Rate_Changes__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the number of periods between periodic rate changes.</description>
        <inlineHelpText>The number of periods between periodic rate changes.</inlineHelpText>
        <label>Periods Between Rate Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Rate_Effective_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the day the regular interest rate takes effect on a variable rate account having a different/special initial or promotional rate (in other words, the date corresponding to the day after the expiration of the initial rate period for the specified account).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The day on which the regular interest rate takes effect on a variable rate account having a different/special initial or promotional rate (i.e. the date corresponding to the day after expiration of initial rate period for the specified account).</inlineHelpText>
        <label>Permanent Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Plan_Number__c</fullName>
        <description>Plan Number</description>
        <inlineHelpText>The plan number with the institution under which accounts will be opened for funds investment. Not the investment account number. The owner may have multiple plans with the institution when some funds can’t commingle, such as rolled over retirement funds.</inlineHelpText>
        <label>Plan Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prevent_Automatic_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the owner of the account that would otherwise automatically renew has determined at account opening to prevent renewals.</description>
        <inlineHelpText>If true the owner of the account that would otherwise automatically renew has determined at account opening to prevent renewals.</inlineHelpText>
        <label>Prevent Automatic Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>This field is requied. It is either automatically set or manually collected as part of the New Deposit Workflow. This field is a picklist that allows the user to specify what product line the deposit is associated with.</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Deposits</fullName>
                </value>
                <value>
                    <fullName>Public Funds Deposits</fullName>
                </value>
                <value>
                    <fullName>Contract Services Deposits</fullName>
                </value>
                <value>
                    <fullName>Consumer Deposits</fullName>
                </value>
                <value>
                    <fullName>Treasury Deposits</fullName>
                </value>
                <value>
                    <fullName>Business Deposits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is automatically set during the New Deposit Workflow. It indicates the product package associated with a deposit.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and is collected during the New Deposit Workflow. This field is a lookup to the product, used to specify which product the deposit is associated with.</description>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>This field is required and is collected during the New Deposit Workflow. This field is a picklist that allows the user to specify what product type the deposit is associated with.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Line__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CML Transaction Products</fullName>
                </value>
                <value>
                    <fullName>CML Savings</fullName>
                </value>
                <value>
                    <fullName>PF Transaction Products</fullName>
                </value>
                <value>
                    <fullName>Deposit Solutions</fullName>
                </value>
                <value>
                    <fullName>PF Savings</fullName>
                </value>
                <value>
                    <fullName>PF Time Deposits</fullName>
                </value>
                <value>
                    <fullName>CS Transaction Products</fullName>
                </value>
                <value>
                    <fullName>Con Transaction Products</fullName>
                </value>
                <value>
                    <fullName>Con Savings</fullName>
                </value>
                <value>
                    <fullName>Con Time Deposits</fullName>
                </value>
                <value>
                    <fullName>Business Deposits</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Public Funds</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>CDs</fullName>
                </value>
                <value>
                    <fullName>IRAs</fullName>
                </value>
                <value>
                    <fullName>HSAs</fullName>
                </value>
                <value>
                    <fullName>BaaS Deposits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field is a picklist that allows the user to specify what product the deposit is associated with.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Product_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Bearing Checking</fullName>
                </value>
                <value>
                    <fullName>Money Market Checking</fullName>
                </value>
                <value>
                    <fullName>Non-Interest Bearing Checking</fullName>
                </value>
                <value>
                    <fullName>Business Savings</fullName>
                </value>
                <value>
                    <fullName>PF Savings</fullName>
                </value>
                <value>
                    <fullName>Public Funds Time Deposits</fullName>
                </value>
                <value>
                    <fullName>Club Savings</fullName>
                </value>
                <value>
                    <fullName>Consumer Savings</fullName>
                </value>
                <value>
                    <fullName>Certificates of Deposit</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Commercial Checking</fullName>
                </value>
                <value>
                    <fullName>Community Checking</fullName>
                </value>
                <value>
                    <fullName>Small Business Checking</fullName>
                </value>
                <value>
                    <fullName>Public Funds Non-Interest Bearing Checking</fullName>
                </value>
                <value>
                    <fullName>Public Funds Interest Bearing Checking</fullName>
                </value>
                <value>
                    <fullName>CDARS</fullName>
                </value>
                <value>
                    <fullName>ICS</fullName>
                </value>
                <value>
                    <fullName>Repurchase Agreement</fullName>
                </value>
                <value>
                    <fullName>Business Money Market</fullName>
                </value>
                <value>
                    <fullName>Business Managed Money Market</fullName>
                </value>
                <value>
                    <fullName>Business High Performance Savings</fullName>
                </value>
                <value>
                    <fullName>C1 - Contract Services Checking</fullName>
                </value>
                <value>
                    <fullName>C2 - Contract Services Interest Checking</fullName>
                </value>
                <value>
                    <fullName>PB - PF Checking</fullName>
                </value>
                <value>
                    <fullName>PX - PF Interest Checking</fullName>
                </value>
                <value>
                    <fullName>PM - PF Money Market</fullName>
                </value>
                <value>
                    <fullName>P4 - PF Managed Money Market</fullName>
                </value>
                <value>
                    <fullName>PH - PF High Performance Savings</fullName>
                </value>
                <value>
                    <fullName>Public Funds CD</fullName>
                </value>
                <value>
                    <fullName>Repurchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Percent__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the amount by which a variable rate may change within the specified term.</description>
        <inlineHelpText>The amount by which a variable rate may change within the specified term.</inlineHelpText>
        <label>Rate Change Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time between periodic rate changes.</description>
        <inlineHelpText>Specifies the period of time between periodic rate changes.</inlineHelpText>
        <label>Rate Change Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Period__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies how often the variable rate can change.</description>
        <inlineHelpText>Specifies how often the variable rate can change.</inlineHelpText>
        <label>Rate Change Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>At any time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Disclosure_As_Of_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the date the on-request account disclosure was created. The rate(s) are accurate as of this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the on-request account disclosure was created. The rate(s) are accurate as of this date.</inlineHelpText>
        <label>Rate Disclosure As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the rate type that applies to the account.</description>
        <inlineHelpText>Specifies the rate type that will apply to the account.</inlineHelpText>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Tier A</fullName>
                </value>
                <value>
                    <fullName>Tier B</fullName>
                </value>
                <value>
                    <fullName>Stepped</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Related_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional although it is automatically set during the CD Renewal Workflow. This field associates two deposit accounts.</description>
        <label>Related Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Related Deposits</relationshipLabel>
        <relationshipName>Related_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Under_Maintenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this field with the Relationship under maintenance in context of a Deposit record.</description>
        <inlineHelpText>Enter the Relationship name associated to the Deposit under maintenance.</inlineHelpText>
        <label>Relationship Under Maintenance</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Maintenanced Deposits</relationshipLabel>
        <relationshipName>Maintenanced_Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Renewal_Interest_Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the interest rate at which the account will be renewed.</description>
        <inlineHelpText>Specifies the interest rate at which the account will be renewed.</inlineHelpText>
        <label>Renewal Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same Basis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Renewal_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the new interest or dividend rate upon automatic renewal.</description>
        <inlineHelpText>The new interest or dividend rate upon automatic renewal.</inlineHelpText>
        <label>Renewal Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Routing_Number__c</fullName>
        <description>--DEPRECATED-- (Replacing with Routing_Transit_Number__c) -- Populate this number (9-digit) field with the 9 Digit ABA Number for the deposit account. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
        <label>-D Routing Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Routing_Transit_Number__c</fullName>
        <description>Populate this text field with the 9 Digit ABA Number for the deposit account. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Security_Deposit_Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the amount of any security deposit for the safe deposit box.</description>
        <inlineHelpText>The amount of any security deposit for the safe deposit box.</inlineHelpText>
        <label>Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Single_Life_Expectancy_Begins__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the year in which single life expectancy payments must begin.</description>
        <inlineHelpText>The year in which single life expectancy payments must begin.</inlineHelpText>
        <label>Single Life Expectancy Begins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Size_of_Box__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the size of the safe deposit box that is being leased.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The size of the safe deposit box that is being leased.</inlineHelpText>
        <label>Size of Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field is a picklist used to specify the stage that the deposit is in.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                    <default>true</default>
                    <label>Qualification</label>
                </value>
                <value>
                    <fullName>Signature Signed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field is a picklist used to specify the status that the deposit is in.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate that applies to the corresponding step.</description>
        <inlineHelpText>The interest rate that applies to the corresponding step.</inlineHelpText>
        <label>Step Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time the corresponding step rate applies.</description>
        <inlineHelpText>Specifies the period of time the corresponding step rate will apply.</inlineHelpText>
        <label>Step Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the corresponding stepped rate applies.</description>
        <inlineHelpText>The number of periods that the corresponding stepped rate will apply.</inlineHelpText>
        <label>Step Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TFA_Activity_Type__c</fullName>
        <description>TFA Activity Type</description>
        <inlineHelpText>This indicates the type of activity that will be performed for the plan.</inlineHelpText>
        <label>TFA Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open a new plan</fullName>
                </value>
                <value>
                    <fullName>Manage or maintain an existing plan</fullName>
                </value>
                <value>
                    <fullName>Close an existing plan</fullName>
                    <isActive>false</isActive>
                    <label>Close an existing plan</label>
                </value>
                <value>
                    <fullName>Request information for an existing plan</fullName>
                    <isActive>false</isActive>
                    <label>Request information for an existing plan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Year_of_First_Roth_Contribution__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the tax year of first Roth IRA contribution or conversion.</description>
        <inlineHelpText>The tax year of first Roth IRA contribution or conversion.</inlineHelpText>
        <label>Tax Year of First Roth Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Type__c</fullName>
        <description>This picklist field is required for CD&apos;s and is manually populated. The picklist values are the time periods used to describe the length of a certificate term. It is used in conjunction with the number field that specifies the number of terms.</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>day(s)</fullName>
                </value>
                <value>
                    <fullName>month(s)</fullName>
                </value>
                <value>
                    <fullName>quarter(s)</fullName>
                </value>
                <value>
                    <fullName>year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate that applies to the corresponding tier.</description>
        <inlineHelpText>The interest rate that applies to the corresponding tier.</inlineHelpText>
        <label>Tiered Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
</CustomObject>